--- a/.github/workflows/front-workflow.yml
+++ b/.github/workflows/front-workflow.yml
@@ -10,14 +10,6 @@ on:
         options:
           - "main"
         required: true
-  workflow_call:
-    secrets:
-      GIT_CRYPT_KEY_BASE64:
-        description: 'git-crypt base64 secret'
-        required: true
-      GH_PROJECT_TOKEN:
-        description: 'github project token'
-        required: true
 
 jobs:
   prepare:
@@ -30,7 +22,6 @@ jobs:
     env:
       # Passed to overwrite namespace
       BRANCH: ${{ inputs.branch }}
-      GIT_CRYPT_KEY_BASE64: ${{ secrets.GIT_CRYPT_KEY_BASE64 }}
     defaults:
       run:
         working-directory: .
@@ -40,23 +31,12 @@ jobs:
         with:
           ref: "${{ inputs.branch }}"
           fetch-depth: 0
-          clean: false
+          clean: true
 
       - name: Install dependecies
         run: |
           sudo apt update -y
-          sudo apt install -y git-crypt make
-
-      - name: Unlock Git-Crypt Secrets
-        run: |
-          echo "$GIT_CRYPT_KEY_BASE64" | base64 -d > .gitcrypt
-          git-crypt unlock .gitcrypt
-
-      - name: Test Secrets
-        run: |
-          ls -la
-          git-crypt status -e
-          cat .env
+          sudo apt install -y make
 
   frontend:
     name: "frontend"
@@ -69,7 +49,6 @@ jobs:
     env:
       # passed to overwrite namespace
       BRANCH: ${{ inputs.branch }}
-      GIT_CRYPT_KEY_BASE64: ${{ secrets.GIT_CRYPT_KEY_BASE64 }}
     defaults:
       run:
         working-directory: .
