--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,7 @@
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name localhost;
 
-    # SSL configuration using the self-signed certificate
     ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
@@ -13,17 +11,13 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
-    # Proxy all requests to the Vite dev server running on port 5173
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        proxy_pass http://localhost:5173;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        try_files $uri $uri/ /index.html;
     }
 
-    # (Optional) Deny access to hidden files, such as .env or .git files.
     location ~ /\.(?!well-known).* {
         deny all;
     }
