--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axois": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-range": "^1.10.0",
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
