--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-range": "^1.10.0",
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4",
     "web-vitals": "^4.2.2"
   },
